added multi axis chart in plugin dir and package.json

--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -110,6 +110,7 @@
     "@superset-ui/plugin-chart-word-cloud": "file:./plugins/plugin-chart-word-cloud",
     "@superset-ui/preset-chart-xy": "file:./plugins/preset-chart-xy",
     "@superset-ui/switchboard": "file:./packages/superset-ui-switchboard",
+    "superset-plugin-chart-multi-axis-line-chart": "file:./plugins/superset-plugin-chart-multi-axis-line-chart",
     "@vx/responsive": "^0.0.195",
     "abortcontroller-polyfill": "^1.1.9",
     "ace-builds": "^1.4.14",
